support JDK 11 or later in experiment
1. use `jdk.internal.ref.Cleaner` instead of `sun.misc.Cleaner`
2. update mockito